[tool.poetry]
name = "pytorjoman"
version = "0.1.0"
description = "Torjoman client for python."
authors = ["Karam Al-Hamada <krmhmade1@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
